$Id: CHANGES,v 1.103 2001/02/21 16:16:00 stelian Exp $

Changes between versions 0.4b21 and 0.4b22 (released ????????????????)
======================================================================

1.	Made dump report the number of blocks dumped per volume.
	Thanks to Kenneth Porter <shiva@well.com> for the suggestion.

2.	Fix a bug in dump where waiting too much at the 'change volumes'
	question caused the volume to be rewritten. Thanks to
	Graham Reed <greed@users.sourceforge.net> for reporting the
	bug and providing a patch.

3.	Added a compression option to dump, contributed by Jerry
	<gapeters@worldnet.att.net>.

	WARNING: the compression works only on drives supporting
	variable block size.

	WARNING2: tapes created using the compression feature are
	incompatible with the standard dump tape format, and a
	version of restore >= 0.4b22 will be needed for extraction.

Changes between versions 0.4b20 and 0.4b21 (released January 13, 2001)
======================================================================

1.	Fixed some bugs in the dump -w|-W logic introduced by
	the previous version. Thanks to Andreas Dilger 
	<adilger@turbolinux.com> for his help on this one.

2.	Fixed again a compilation problem when using old e2fs
	headers (filesystem label related). Thanks to many users
	who reported this stupid error.

3.	Fixed a build problem on old lib5 based systems dealing with 
	_PATH_MNTTAB being undefined. Thanks to John Adams
	<johna@onevista.com> for reporting the bug.

4.	Improved the error detection in restore when creating
	the temporary files in TMPDIR. Now restore will corectly
	report a 'no space left on device' error instead of 
	strange errors which could imply an archive corruption.
	Thanks to Gabriel Somlo <somlo@cs.colostate.edu> and
	bgjenero <bgjenero@sympatico.ca> for reporting the bug.

5.	Added the throughput information in dump's progression
	messages.  Thanks to Andreas Dilger <adilger@turbolinux.com> 
	for the patch.
